--- a/src/App.css
+++ b/src/App.css
@@ -472,5 +472,64 @@ body {
         display: flex;
         align-items: center;
         justify-content: space-between;
+        padding-inline: 1rem;
+        gap: auto;
+    }
+
+    .logo img {
+        width: 136px;
+        height: 18px;
+    }
+
+    .hero-section {
+        display: flex;
+        flex-direction: column;
+        background-image: center;
+        background-position: center;
+        padding-inline: 1rem;
+    }
+
+    .hero-content .title {
+        font-size: 36px;
+        font-weight: 700;
+        white-space: nowrap;
+    }
+
+    .hero-content p {
+        font-size: 14px;
+        font-weight: 300;
+    }
+
+    .hero-content button {
+        width: 100%;
+        height: 52px;
+    }
+
+    .hero-quality {
+        padding-inline: 1rem;
+    }
+
+    /* CARD STYLE */
+    .arrival-section .title {
+        font-size: 2rem;
+    }
+
+    .arrival-container {
+        width: 100%;
+        padding-inline-start: 1rem;
+    }
+
+    .arrival-img {
+        width: 198px;
+        height: 200px;
+    }
+
+    .arrival-img img {
+        width: 198px;
+        height: 298px;
+    }
+
+    .arrival-title {
+        font-size: 1rem;
     }
 }
